[optimize] fix java doc

--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,8 @@
   ~
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- 父项目信息 -->
@@ -181,7 +182,7 @@
     <!-- 本项目信息 -->
     <groupId>vip.isass</groupId>
     <artifactId>super</artifactId>
-    <version>super.3.0.1-SNAPSHOT</version>
+    <version>super.3.0.0-RELEASE</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -219,31 +220,31 @@
 
         <!-- start isass-core -->
 
-        <super-core.version>super.3.0.1-SNAPSHOT</super-core.version>
-        <core-cache.version>super.3.0.1-SNAPSHOT</core-cache.version>
-        <core-database.version>super.3.0.1-SNAPSHOT</core-database.version>
-        <core-database-mybatisplus.version>super.3.0.1-SNAPSHOT</core-database-mybatisplus.version>
-        <core-database-mybatisplus-postgresql.version>super.3.0.1-SNAPSHOT
+        <super-core.version>super.3.0.0-RELEASE</super-core.version>
+        <core-cache.version>super.3.0.0-RELEASE</core-cache.version>
+        <core-database.version>super.3.0.0-RELEASE</core-database.version>
+        <core-database-mybatisplus.version>super.3.0.0-RELEASE</core-database-mybatisplus.version>
+        <core-database-mybatisplus-postgresql.version>super.3.0.0-RELEASE
         </core-database-mybatisplus-postgresql.version>
-        <core-database-mysql.version>super.3.0.1-SNAPSHOT</core-database-mysql.version>
-        <core-database-postgresql.version>super.3.0.1-SNAPSHOT</core-database-postgresql.version>
-        <core-database-querydsl.version>super.3.0.1-SNAPSHOT</core-database-querydsl.version>
-        <core-database-sharding-jdbc.version>super.3.0.1-SNAPSHOT</core-database-sharding-jdbc.version>
-        <core-elasticsearch.version>super.3.0.1-SNAPSHOT</core-elasticsearch.version>
-        <core-encryption.version>super.3.0.1-SNAPSHOT</core-encryption.version>
-        <core-mq.version>super.3.0.1-SNAPSHOT</core-mq.version>
-        <core-mq-ons.version>super.3.0.1-SNAPSHOT</core-mq-ons.version>
-        <core-net.version>super.3.0.1-SNAPSHOT</core-net.version>
-        <core-net-tcp.version>super.3.0.1-SNAPSHOT</core-net-tcp.version>
-        <core-net-websocket.version>super.3.0.1-SNAPSHOT</core-net-websocket.version>
-        <core-protobuf.version>super.3.0.1-SNAPSHOT</core-protobuf.version>
-        <core-web.version>super.3.0.1-SNAPSHOT</core-web.version>
-        <core-web-res.version>super.3.0.1-SNAPSHOT</core-web-res.version>
-        <core-web-rpc-feign.version>super.3.0.1-SNAPSHOT</core-web-rpc-feign.version>
-        <core-web-security.version>super.3.0.1-SNAPSHOT</core-web-security.version>
-        <core-web-swagger.version>super.3.0.1-SNAPSHOT</core-web-swagger.version>
-        <core-mongobd.version>super.3.0.0-SNAPSHOT</core-mongobd.version>
-        <core-database-listener.version>super.3.0.0-SNAPSHOT</core-database-listener.version>
+        <core-database-mysql.version>super.3.0.0-RELEASE</core-database-mysql.version>
+        <core-database-postgresql.version>super.3.0.0-RELEASE</core-database-postgresql.version>
+        <core-database-querydsl.version>super.3.0.0-RELEASE</core-database-querydsl.version>
+        <core-database-sharding-jdbc.version>super.3.0.0-RELEASE</core-database-sharding-jdbc.version>
+        <core-elasticsearch.version>super.3.0.0-RELEASE</core-elasticsearch.version>
+        <core-encryption.version>super.3.0.0-RELEASE</core-encryption.version>
+        <core-mq.version>super.3.0.0-RELEASE</core-mq.version>
+        <core-mq-ons.version>super.3.0.0-RELEASE</core-mq-ons.version>
+        <core-net.version>super.3.0.0-RELEASE</core-net.version>
+        <core-net-tcp.version>super.3.0.0-RELEASE</core-net-tcp.version>
+        <core-net-websocket.version>super.3.0.0-RELEASE</core-net-websocket.version>
+        <core-protobuf.version>super.3.0.0-RELEASE</core-protobuf.version>
+        <core-web.version>super.3.0.0-RELEASE</core-web.version>
+        <core-web-res.version>super.3.0.0-RELEASE</core-web-res.version>
+        <core-web-rpc-feign.version>super.3.0.0-RELEASE</core-web-rpc-feign.version>
+        <core-web-security.version>super.3.0.0-RELEASE</core-web-security.version>
+        <core-web-swagger.version>super.3.0.0-RELEASE</core-web-swagger.version>
+        <core-mongobd.version>super.3.0.0-RELEASE</core-mongobd.version>
+        <core-database-listener.version>super.3.0.0-RELEASE</core-database-listener.version>
 
         <!-- end isass-core -->
 
@@ -878,7 +879,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
@@ -927,12 +927,6 @@
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
-                                <configuration>
-                                    <charset>UTF-8</charset>
-                                    <encoding>UTF-8</encoding>
-                                    <docencoding>UTF-8</docencoding>
-                                    <additionalparam>-Xdoclint:none</additionalparam>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -965,7 +959,7 @@
                         <configuration>
                             <serverId>ossrh</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
                         </configuration>
                     </plugin>
 
@@ -974,7 +968,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
                         <configuration>
-                            <tagNameFormat>v@{project.version}</tagNameFormat>
+                            <tagNameFormat>@{project.version}</tagNameFormat>
                             <autoVersionSubmodules>true</autoVersionSubmodules>
                             <releaseProfiles>isass-deploy</releaseProfiles>
                             <useReleaseProfile>true</useReleaseProfile>
@@ -1040,15 +1034,15 @@
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
 
-        <repository>
-            <id>isass-rdc-releases</id>
-            <url>https://repo.rdc.aliyun.com/repository/119151-release-MRcouB/</url>
-        </repository>
+<!--        <repository>-->
+<!--            <id>isass-rdc-releases</id>-->
+<!--            <url>https://repo.rdc.aliyun.com/repository/119151-release-MRcouB/</url>-->
+<!--        </repository>-->
 
-        <repository>
-            <id>isass-rdc-snapshots</id>
-            <url>https://repo.rdc.aliyun.com/repository/119151-snapshot-FUsqMk/</url>
-        </repository>
+<!--        <repository>-->
+<!--            <id>isass-rdc-snapshots</id>-->
+<!--            <url>https://repo.rdc.aliyun.com/repository/119151-snapshot-FUsqMk/</url>-->
+<!--        </repository>-->
 
     </repositories>
 
