--- a/super-core-encryption/pom.xml
+++ b/super-core-encryption/pom.xml
@@ -175,12 +175,12 @@
     <parent>
         <groupId>vip.isass</groupId>
         <artifactId>super</artifactId>
-        <version>super.3.0.0-RELEASE</version>
+        <version>super.3.0.0-SNAPSHOT</version>
     </parent>
 
     <!-- 本项目信息 -->
     <artifactId>super-core-encryption</artifactId>
-    <version>super.3.0.0-RELEASE</version>
+    <version>super.3.0.0-SNAPSHOT</version>
 
     <dependencies>
 
