--- a/super-core-mq-ons/pom.xml
+++ b/super-core-mq-ons/pom.xml
@@ -168,19 +168,20 @@
   ~
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- 父项目信息 -->
     <parent>
         <groupId>vip.isass</groupId>
         <artifactId>super</artifactId>
-        <version>super.3.0.0-SNAPSHOT</version>
+        <version>super.3.0.0-release</version>
     </parent>
 
     <!-- 本项目信息 -->
     <artifactId>super-core-mq-ons</artifactId>
-    <version>super.3.0.0-SNAPSHOT</version>
+    <version>super.3.0.0-release</version>
 
     <dependencies>
 
@@ -212,9 +213,16 @@
             <id>isass-rdc-releases</id>
             <url>https://repo.rdc.aliyun.com/repository/119151-release-MRcouB/</url>
         </repository>
+
         <repository>
             <id>isass-rdc-snapshots</id>
             <url>https://repo.rdc.aliyun.com/repository/119151-snapshot-FUsqMk/</url>
         </repository>
+
+        <repository>
+            <id>center-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
     </repositories>
+
 </project>
