--- a/super-core-database-querydsl/pom.xml
+++ b/super-core-database-querydsl/pom.xml
@@ -23,7 +23,7 @@
   ~
   ~   An "Application" is any work that makes use of an interface provided
   ~ by the Library, but which is not otherwise based on the Library.
-  ~ Defining a subclass of a class defined by the Library is deemed a mode
+  ~ Defining a subclass of a class defined by t7he Library is deemed a mode
   ~ of using an interface provided by the Library.
   ~
   ~   A "Combined Work" is a work produced by combining or linking an
@@ -168,19 +168,20 @@
   ~
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- 父项目信息 -->
     <parent>
         <groupId>vip.isass</groupId>
         <artifactId>super</artifactId>
-        <version>super.3.0.0-SNAPSHOT</version>
+        <version>super.3.0.0-release</version>
     </parent>
 
     <!-- 本项目信息 -->
     <artifactId>super-core-database-querydsl</artifactId>
-    <version>super.3.0.0-SNAPSHOT</version>
+    <version>super.3.0.0-release</version>
 
     <dependencies>
         <dependency>
@@ -225,6 +226,11 @@
         <repository>
             <id>isass-rdc-snapshots</id>
             <url>https://repo.rdc.aliyun.com/repository/119151-snapshot-FUsqMk/</url>
+        </repository>
+
+        <repository>
+            <id>center-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
     </repositories>
 
