--- a/super-core-database-mybatisplus-postgresql/pom.xml
+++ b/super-core-database-mybatisplus-postgresql/pom.xml
@@ -176,12 +176,12 @@
     <parent>
         <groupId>vip.isass</groupId>
         <artifactId>super</artifactId>
-        <version>super.3.0.0-release</version>
+        <version>super.3.0.2-SNAPSHOT</version>
     </parent>
 
     <!-- 本项目信息 -->
     <artifactId>super-core-database-mybatisplus-postgresql</artifactId>
-    <version>super.3.0.0-release</version>
+    <version>super.3.0.2-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
