--- a/pom.xml
+++ b/pom.xml
@@ -952,15 +952,15 @@
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
 
-        <repository>
-            <id>isass-rdc-releases</id>
-            <url>https://repo.rdc.aliyun.com/repository/119151-release-MRcouB/</url>
-        </repository>
+<!--        <repository>-->
+<!--            <id>isass-rdc-releases</id>-->
+<!--            <url>https://repo.rdc.aliyun.com/repository/119151-release-MRcouB/</url>-->
+<!--        </repository>-->
 
-        <repository>
-            <id>isass-rdc-snapshots</id>
-            <url>https://repo.rdc.aliyun.com/repository/119151-snapshot-FUsqMk/</url>
-        </repository>
+<!--        <repository>-->
+<!--            <id>isass-rdc-snapshots</id>-->
+<!--            <url>https://repo.rdc.aliyun.com/repository/119151-snapshot-FUsqMk/</url>-->
+<!--        </repository>-->
 
         <repository>
             <id>center-snapshots</id>
