--- a/super-core-cache/pom.xml
+++ b/super-core-cache/pom.xml
@@ -183,6 +183,10 @@
     <artifactId>super-core-cache</artifactId>
     <version>super.3.0.2-SNAPSHOT</version>
 
+    <properties>
+        <deploy.skip>true</deploy.skip>
+    </properties>
+
     <dependencies>
 
         <!-- 缓存 -->
@@ -209,6 +213,18 @@
         <!--<artifactId>ehcache</artifactId>-->
         <!--</dependency>-->
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>${deploy.skip}</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
