--- a/super-core-database-querydsl/pom.xml
+++ b/super-core-database-querydsl/pom.xml
@@ -183,6 +183,10 @@
     <artifactId>super-core-database-querydsl</artifactId>
     <version>super.3.0.2-SNAPSHOT</version>
 
+    <properties>
+        <deploy.skip>true</deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
@@ -256,6 +260,14 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>${deploy.skip}</skip>
+                </configuration>
             </plugin>
         </plugins>
     </build>
