--- a/super-core-database-sharding-jdbc/pom.xml
+++ b/super-core-database-sharding-jdbc/pom.xml
@@ -183,6 +183,10 @@
     <artifactId>super-core-database-sharding-jdbc</artifactId>
     <version>super.3.0.2-SNAPSHOT</version>
 
+    <properties>
+        <deploy.skip>true</deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
@@ -194,6 +198,18 @@
             <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>${deploy.skip}</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
