--- a/super-core-elasticsearch/pom.xml
+++ b/super-core-elasticsearch/pom.xml
@@ -183,6 +183,10 @@
     <artifactId>super-core-elasticsearch</artifactId>
     <version>super.3.0.2-SNAPSHOT</version>
 
+    <properties>
+        <deploy.skip>true</deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
@@ -206,6 +210,18 @@
         <!--</dependency>-->
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>${deploy.skip}</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
