--- a/super-core-protobuf/pom.xml
+++ b/super-core-protobuf/pom.xml
@@ -183,8 +183,11 @@
     <artifactId>super-core-protobuf</artifactId>
     <version>super.3.0.2-SNAPSHOT</version>
 
-    <dependencies>
+    <properties>
+        <deploy.skip>true</deploy.skip>
+    </properties>
 
+    <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -195,6 +198,18 @@
             <artifactId>protobuf-java</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>${deploy.skip}</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
