--- a/super-core-web-swagger/pom.xml
+++ b/super-core-web-swagger/pom.xml
@@ -183,8 +183,11 @@
     <artifactId>super-core-web-swagger</artifactId>
     <version>super.3.0.2-SNAPSHOT</version>
 
-    <dependencies>
+    <properties>
+        <deploy.skip>true</deploy.skip>
+    </properties>
 
+    <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
             <artifactId>super-core-web</artifactId>
@@ -194,8 +197,19 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>${deploy.skip}</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
