--- a/super-core-cache/pom.xml
+++ b/super-core-cache/pom.xml
@@ -183,10 +183,6 @@
     <artifactId>super-core-cache</artifactId>
     <version>super.3.0.2-SNAPSHOT</version>
 
-    <properties>
-        <deploy.skip>true</deploy.skip>
-    </properties>
-
     <dependencies>
 
         <!-- 缓存 -->
@@ -220,7 +216,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <configuration>
-                    <skip>${deploy.skip}</skip>
+                    <skip>false</skip>
                 </configuration>
             </plugin>
         </plugins>
