--- a/super-core-net/pom.xml
+++ b/super-core-net/pom.xml
@@ -183,10 +183,6 @@
     <artifactId>super-core-net</artifactId>
     <version>super.3.0.2-SNAPSHOT</version>
 
-    <properties>
-        <deploy.skip>true</deploy.skip>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
@@ -221,7 +217,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <configuration>
-                    <skip>${deploy.skip}</skip>
+                    <skip>false</skip>
                 </configuration>
             </plugin>
         </plugins>
