--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,7 @@
         <module>super-core-database-sharding-jdbc</module>
         <module>super-core-mq</module>
         <module>super-core-mq-ons</module>
+        <module>super-core-mq-kafka011</module>
         <module>super-core-web</module>
         <module>super-core-web-security</module>
         <module>super-core-web-res</module>
@@ -234,6 +235,7 @@
         <core-encryption.version>super.3.0.2-SNAPSHOT</core-encryption.version>
         <core-mq.version>super.3.0.2-SNAPSHOT</core-mq.version>
         <core-mq-ons.version>super.3.0.2-SNAPSHOT</core-mq-ons.version>
+        <core-mq-kafka011.version>super.3.0.2-SNAPSHOT</core-mq-kafka011.version>
         <core-net.version>super.3.0.2-SNAPSHOT</core-net.version>
         <core-net-tcp.version>super.3.0.2-SNAPSHOT</core-net-tcp.version>
         <core-net-websocket.version>super.3.0.2-SNAPSHOT</core-net-websocket.version>
@@ -470,6 +472,12 @@
                 <groupId>vip.isass</groupId>
                 <artifactId>super-core-mq-ons</artifactId>
                 <version>${core-mq-ons.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>vip.isass</groupId>
+                <artifactId>super-core-mq-kafka011</artifactId>
+                <version>${core-mq-kafka011.version}</version>
             </dependency>
 
             <dependency>
