--- a/super-core-mq-kafka011/pom.xml
+++ b/super-core-mq-kafka011/pom.xml
@@ -180,8 +180,12 @@
     </parent>
 
     <!-- 本项目信息 -->
-    <artifactId>super-core-mq</artifactId>
+    <artifactId>super-core-mq-kafka011</artifactId>
     <version>super.3.0.2-SNAPSHOT</version>
+
+    <properties>
+        <kafka.version>0.11.0.3</kafka.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -190,26 +194,15 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <scope>provided</scope>
+            <groupId>vip.isass</groupId>
+            <artifactId>super-core-mq</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>org.mybatis.spring.boot</groupId>-->
-        <!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
-        <!--&lt;!&ndash;<scope>provided</scope>&ndash;&gt;-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-        <!--<groupId>org.apache.rocketmq</groupId>-->
-        <!--<artifactId>rocketmq-client</artifactId>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.apache.rocketmq</groupId>-->
-        <!--<artifactId>rocketmq-common</artifactId>-->
-        <!--</dependency>-->
-
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${kafka.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
