[feature] supper MySql json Convert

--- a/super-core-database/pom.xml
+++ b/super-core-database/pom.xml
@@ -200,8 +200,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
         <dependency>
