--- a/super-core-web-res/pom.xml
+++ b/super-core-web-res/pom.xml
@@ -194,6 +194,11 @@
             <artifactId>super-core-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>vip.isass</groupId>
+            <artifactId>super-core-web-security</artifactId>
+        </dependency>
+
         <!--<dependency>-->
         <!--<groupId>org.springframework.boot</groupId>-->
         <!--<artifactId>spring-boot-starter</artifactId>-->
